--- a/public/css/index.css
+++ b/public/css/index.css
@@ -131,6 +131,12 @@ div {
 
 #chathistory {
   background-color: #DDDDDD;
+  overflow: scroll;
+  /* align to botom */
+  bottom: 0;
+  /* position: fixed; */
+  /* bottom: 0; */
+  /* width: 100%; */
 }
 
 #sent {
