--- a/public/css/index.css
+++ b/public/css/index.css
@@ -132,13 +132,6 @@ div {
 #chathistory {
   background-color: #DDDDDD;
   overflow: scroll;
-  /* align to botom */
   bottom: 0;
-  /* position: fixed; */
-  /* bottom: 0; */
-  /* width: 100%; */
-}
-
-#sent {
-  overflow: auto 
+  overflow-wrap: break-word;
 }
